Drop bundled chardet RRR
This is version 1.0.1, which is from 2008. Slightly outdated, let's
upgrade to 3.0.4, which supports both py3 and py2.

I threw every patcher we have at it, but it didn't change the checksum
of the resulting BP (after adjusting the description to account for the
date change, obviously), so this doesn't seem to change behavior.

Under # 460 <--- RRR

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Runtime, required
+chardet
 pywin32>=220,<225
 https://github.com/wrye-bash/dev-tools/raw/master/wheels/wxPython-3.0.2.0-cp27-cp27m-win32.whl
 # Runtime, recommended
