--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Runtime, required
-chardet
+chardet~=3.0
 pywin32>=220,<225
 https://github.com/wrye-bash/dev-tools/raw/master/wheels/wxPython-3.0.2.0-cp27-cp27m-win32.whl
 # Runtime, recommended
-scandir>=1.9.0
+scandir~=1.9
 # Compile/Build-time
-pygit2>=0.28.0
+pygit2~=0.28
 https://github.com/wrye-bash/dev-tools/raw/master/wheels/py2exe-0.6.9-cp27-cp27m-win32.whl
