--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pywin32>=220
+# Runtime, required
+pywin32>=220,<225
+https://github.com/wrye-bash/dev-tools/raw/master/wheels/wxPython-3.0.2.0-cp27-cp27m-win32.whl
+# Runtime, recommended
 scandir>=1.9.0
+# Compile/Build-time
 pygit2>=0.28.0
-https://github.com/wrye-bash/dev-tools/raw/master/wheels/comtypes-0.6.2-cp27-cp27m-win32.whl
-https://github.com/wrye-bash/dev-tools/raw/master/wheels/wxPython-2.8.12.1-cp27-cp27m-win32.whl
 https://github.com/wrye-bash/dev-tools/raw/master/wheels/py2exe-0.6.9-cp27-cp27m-win32.whl
