--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Runtime, required
 chardet
 pywin32>=220,<225
-https://github.com/wrye-bash/dev-tools/raw/master/wheels/wxPython-3.0.2.0-cp27-cp27m-win32.whl
+wxPython>=4.0.7.post1
 # Runtime, recommended
 scandir>=1.9.0
 # Compile/Build-time
