Remove mkiniheader script
The script is useless since figlet exists. The font currently used in
the ini files is 'big'.

--- a/Mopy/bash_default.ini
+++ b/Mopy/bash_default.ini
@@ -6,7 +6,7 @@
 ;#  |____/ \__,_|___/_| |_(_)_|_| |_|_|  |____/   \___/   /_/
 
 ;The Default Font for the ASCII Art Headers is Lucida Console, Regular, 10
-;(Notepad)
+;(Notepad) or the 'big' font in [py]figlet
 
 ;--This is the generic version of Bash.ini. You must copy or rename it to
 ;  "bash.ini" before it can be used. It is distributed as bash_default.ini so
